# gentry-crypto

./: .gitignore  CMakeLists.txt  Makefile  README.md  gf.hpp
include/gentry/: gentry.hpp
include/homomorphic_schemes/: FHS.hpp  SHS.hpp  SWHS.hpp
include/math/: Matrix.hpp  Polynomial.hpp  Vector.hpp  Zn.hpp  gf.hpp  linalg.hpp
include/poll/: poll.hpp
src/math/: Matrix.cpp  Vector.cpp  linalg.cpp
test/: test  test.cpp  test_linalg.cpp
